--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -54,4 +54,7 @@
             [disabled]="(productsNumber$ | async) <= end">
         Next Page >
     </button>
+    <button (click)="loadMore()" *ngIf="(productsNumber$ | async) <= end">
+        Load {{productsToLoad}} more...
+    </button>
 </div>
